--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -121,10 +121,10 @@
   </div> <!-- end page -->
    
 <script type="text/javascript">
-  var specVis1 = "./graph1.json";
-  var specVis2= "./graph2.json";
-  var specVis3="./graph3.json";
-  var specVis4= "./graph4.json";
+  var specVis1 = "./js/graph1.json";
+  var specVis2= "./js/graph2.json";
+  var specVis3="./js/graph3.json";
+  var specVis4= "./js/graph4.json";
 
   vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
