--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -102,10 +102,10 @@
         </div>
       </div>
       <div class="pure-u-1-3">
-        <div id="vis4"  class="vis-container"></div>
+        <div id="vis3"  class="vis-container"></div>
       </div>
       <div class="pure-u-1-3">
-        <div id="vis3"  class="vis-container"></div>
+        <div id="vis4"  class="vis-container"></div>
       </div>
     
     </div>
@@ -138,7 +138,7 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  vegaEmbed('#vis4', specVis4, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis4', specVics4, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
