--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -113,7 +113,7 @@
   
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://github.com/KadekSatriadi" target="_blank">Kadek Satriadi</a>. The datasource is <a href="#"" target="_blank">some data repository online</href>.</p>
+        <p>This visualisation is created by <a href="https://github.com/satish2198/satishkumarFIT3179/tree/master/Assignment2" target="_blank">Satish Kumar</a>. The datasource is <a href="#"" target="_blank">some data repository online</href>.</p>
       </div>
     </div>
   
