--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -26,7 +26,7 @@
      }
      .page{
        width: 950px;    
-       background-color: white;   
+       background-color: Bisque;   
        margin: auto;
        padding: 50px;
        padding-top: 35px;
