--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -85,8 +85,8 @@
         </div>
         <div class="pure-u-1-3">
           <div class="description description-right">
-            <h2>2nd</h2>
-            <p></p>
+            <h2>2nd Viz</h2>
+            <p>yoyoyoyoyoyoyoyoyoyoyoyoyoyoyooyoymofos</p>
           </div>
         </div>
       
