--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -141,8 +141,8 @@
     <!-- end pure grid group -->
    <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-3">
-        <div class="description description-left">
+      <div class="pure-u-2-3">
+        <div class="description description-right">
           <h2>This is the 6th section</h2>
           <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
         </div>
