--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -60,7 +60,14 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Coronavirus COVID-19 Global Statistics - (January 2020 - August 2020)</h1>
-        <p>This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.This page demonstrates how you can use pure.css grid for your layout.</p>
+        <p>This dashboard is presented in a series of visualisations for detecting potential new cluster of the Coronavirus in specific regions and Country. 
+          Readers can also see the data which shows of various correlation and different attributes related to the Covid-19 pandemic 
+          which is measured over a period of time.
+          This allows people to view and understand which Country or Region has a good or bad record in dealing with this global pandemic. 
+          Moreover,this data is also crucial for civilains in the respected countries as it offer similar windows into how the coronavirus 
+          is spreading within their borders.
+          Henceforth, this helps policymakers and citizens determine how to go about daily life, while reducing risks 
+          and providing researchers with a wealth of data to analyse the virus and try to curb the damage.</p>
       </div>
     </div>
   <!-- end pure grid group -->
