--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -22,6 +22,12 @@
       font-weight: 900;
       text-align: center;
     }
+    p{
+      text-align: center;
+      font-family: courier;
+      font-weight:300
+    }
+    
      body{
        background-color: lightgray;
      }
