--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -24,7 +24,7 @@
     }
     p{
       text-align: center;
-      font-family: courier;
+      font-family: helvetica;
       font-weight:100
     }
     
