--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -25,7 +25,8 @@
     p{
       text-align: center;
       font-family: helvetica;
-      font-weight:200
+      font-weight:200;
+      word-spacing: 1px;
     }
     
      body{
@@ -88,8 +89,8 @@
     <div class="pure-g">
         <div class="pure-u-1-3">
           <div class="description description-left">
-            <h2>This is the first section</h2>
-            <p>The first column is used for description while the next two columns are merged and used for visualisation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+            <h2></h2>
+            <p>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus orginated from China, it is countries in North and South America that are suffering largely from this pandemic.</p>
           </div>
         </div>
         <div class="pure-u-2-3">
