--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -27,6 +27,7 @@
       font-family: helvetica;
       font-weight:200;
       word-spacing: 1px;
+      text-align-last: justify;
     }
     
      body{
