--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -25,8 +25,11 @@
     p{
       text-align: center;
       font-family: helvetica;
-      font-weight:900;
+      font-weight:300;
       word-spacing: 1px;
+    }
+    p2{
+    font-weight:300;
     }
     
      body{
@@ -90,7 +93,7 @@
         <div class="pure-u-1-3">
           <div class="description description-left">
             <h2></h2>
-            <p>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus orginated from China, it is countries in North and South America that are suffering largely from this pandemic.</p>
+            <p2>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus orginated from China, it is countries in North and South America that are suffering largely from this pandemic.</p2>
           </div>
         </div>
         <div class="pure-u-2-3">
