--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -27,6 +27,7 @@
       font-family: helvetica;
       font-weight:300;
       word-spacing: 1px;
+      line-height: 1.8;
     }
     p2{
     font-weight:300;
