--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -30,7 +30,11 @@
       line-height: 1.8;
     }
     p2{
-    font-weight:300;
+      text-align: center;
+      font-family: helvetica;
+      word-spacing: 1px;
+    font-weight:500;
+      line-height: 1.8;
     }
     
      body{
