--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -98,7 +98,9 @@
         <div class="pure-u-1-3">
           <div class="description description-left">
             <h2></h2>
-            <p2>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus orginated from China, it is countries in North and South America that are suffering largely from this pandemic. From hovering around the map, we can see that Greenland appears to be one of the Countries that as of August 2020 had 0 active covid cases.</p2>
+            <p2>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus 
+              orginated from China, it is countries in North and South America that are suffering largely from this pandemic. From hovering around the map, 
+              we can see that Greenland appears to be one of the Countries that as of August 2020 had 0 active covid cases.</p2>
           </div>
         </div>
         <div class="pure-u-2-3">
@@ -114,8 +116,10 @@
         </div>
         <div class="pure-u-1-3">
           <div class="description description-right">
-            <h2>2nd Viz</h2>
-            <p>yoyoyoyoyoyoyoyoyoyoyoyoyoyoyooyoymofos</p>
+            <h2></h2>
+            <p2>This graph shows the Top 10 Countries which has a high DeathRate/100 Cases and RecoveredRate/100 Cases in the 6 WHO Regions! 
+              The size of the circle relates to the no of deaths/100 Cases in that specific country and the higher the value, the bigger the circle. 
+              The data is categorised as a general top 10 and top 10 in each of the WHO Region as well. </p2>
           </div>
         </div>
       
