--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -21,6 +21,7 @@
     h1{
       font-weight: 900;
       text-align: center;
+      line-height: 1.8;
     }
     p{
       text-align: center;
@@ -130,8 +131,10 @@
     <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>This is the third section</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+          <h2></h2>
+          <p>This bar graph shows the Covid-19 tests done in each of the WHO region. It also includes Countries that are not recognised by WHO. 
+            This statistic aims to accentuate how many tests are being done in correlation to the no of Cases confirmed in each region.From the chart,it shows that
+            Europe is the highest in tests performed and South East Asia is the lowest.</p>
         </div>
       </div>
       <div class="pure-u-1-3">
