--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -76,7 +76,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1>Coronavirus COVID-19 Global Statistics - (January 2020 - August 2020)</h1>
-        <p>This dashboard is presented in a series of visualisations for detecting potential new cluster of the Coronavirus in specific regions and Country.
+        <p2>This dashboard is presented in a series of visualisations for detecting potential new cluster of the Coronavirus in specific regions and Country.
           
           Readers can also see the data which shows of various correlation and different attributes related to the Covid-19 pandemic 
           which is measured over 
@@ -89,7 +89,7 @@
           within their borders. Henceforth,this helps policymakers and citizens determine how to go about daily life, while reducing risks 
           and providing 
           
-          researchers with a wealth of data to analyse the virus and try to curb the damage.</p>
+          researchers with a wealth of data to analyse the virus and try to curb the damage.</p2>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -134,7 +134,7 @@
           <h2></h2>
           <p>This bar graph shows the Covid-19 tests done in each of the WHO region. It also includes Countries that are not recognised by WHO. 
             This statistic aims to accentuate how many tests are being done in correlation to the no of Cases confirmed in each region.From the chart,it shows that
-            Europe is the highest in tests performed and South East Asia is the lowest.</p>
+            Europe is the highest in tests performed and South East Asia is the lowest. </p>
         </div>
       </div>
       <div class="pure-u-1-3">
@@ -152,7 +152,7 @@
         </div>
         <div class="pure-u-1-3">
           <div class="description description-right">
-            <h2>4th section</h2>
+            <h2></h2>
             <p>testtesttest</p>
           </div>
         </div>
