--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -153,10 +153,10 @@
         <div class="pure-u-1-3">
           <div class="description description-right">
             <h2></h2>
-            <p2>This line chart shows the monthly death confirmed in millions for each region. This data is measured across from January 2020 untill start of 
+            <p>This line chart shows the monthly death confirmed in millions for each region. This data is measured across from January 2020 untill start of 
               August 2020. We can observe that the Americas WHO region peaks to the highest after May surpassing Europe. Thus, we can conclude from the graph 
               before that even though the America regions have done lesser testing compared to Europe, it still has a larger amount of deaths and 
-              confirmed cases. </p2>
+              confirmed cases. </p>
           </div>
         </div>
       
