--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -99,9 +99,9 @@
         <div class="pure-u-1-3">
           <div class="description description-left">
             <h2></h2>
-            <p2>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus 
+            <p>The darker colour demonstrates the countries with the highest total cases per 1M population. As can be seen, even though the virus 
               orginated from China, it is countries in North and South America that are suffering largely from this pandemic. From hovering around the map, 
-              we can see that Greenland appears to be one of the Countries that as of August 2020 had 0 active covid cases.</p2>
+              we can see that Greenland appears to be one of the Countries that as of August 2020 had 0 active covid cases.</p>
           </div>
         </div>
         <div class="pure-u-2-3">
