--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -167,8 +167,11 @@
     <div class="pure-g">
       <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>This is the 5th section</h2>
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+          <h2></h2>
+          <p>This bar graph shows the Covid-19 Outbreak by Country in a ranked order. It shows top 10 countries sorted by total deaths recorder per 100 cases. This 
+          statistic teaches us that not necessarily a country that has high number of cases can have a high mortality rate. We need to view it in terms of their population
+          and record the number to compare it against other countries. From that observation, we can conclude that the country Chad from central Africa 
+            has the highest death rate in the world as of August 2020. </p>
         </div>
       </div>
       <div class="pure-u-1-3">
@@ -197,7 +200,10 @@
  
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
-        <p>This visualisation is created by <a href="https://github.com/satish2198/satishkumarFIT3179/tree/master/Assignment2" target="_blank">Satish Kumar</a>. The datasource is <a href="#"" target="_blank">some data repository online</href>.</p>
+        <p>This visualisation is created by <a href="https://github.com/satish2198/satishkumarFIT3179/tree/master/Assignment2" 
+                                               target="_blank">Satish Kumar</a>. The datasource is <a href="#"" target="_blank">some
+          data repository online</href>.</p>
+          <p2>*WHO= World Health Organisation</p2>
       </div>
     </div>
   
