--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -189,8 +189,11 @@
         </div>
         <div class="pure-u-1-3">
           <div class="description description-right">
-            <h2>6th section</h2>
-            <p>testtesttest</p>
+            <h2></h2>
+            <p>This final map shows the RecoveryRate per 100 Cases throughout the continent. The darker color depics country with a high recovery rate and it 
+              is obvious 
+            that Greenland should be one of the highestin recovery rate due to their low active cases we saw in the first map. The countries can be viewed 
+              with their total confirmed and recovered case as a whole as well. </p>
           </div>
         </div>
       
@@ -203,7 +206,7 @@
         <p>This visualisation is created by <a href="https://github.com/satish2198/satishkumarFIT3179/tree/master/Assignment2" 
                                                target="_blank">Satish Kumar</a>. The datasource is <a href="#"" target="_blank">some
           data repository online</href>.</p>
-          <p2>*WHO= World Health Organisation</p2>
+        <p>*WHO= World Health Organisation</p>
       </div>
     </div>
   
