--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -193,7 +193,8 @@
             <p>This final map shows the RecoveryRate per 100 Cases throughout the continent. The darker color depics country with a high recovery rate and it 
               is obvious 
             that Greenland should be one of the highestin recovery rate due to their low active cases we saw in the first map. The countries can be viewed 
-              with their total confirmed and recovered case as a whole as well. </p>
+              with their total confirmed and recovered case as a whole as well.We can alos observe that some countries in the Africa continent are not doing 
+              too well with some countries like Nambia with a low 5.48 Recovery rate.</p>
           </div>
         </div>
       
@@ -206,7 +207,7 @@
         <p>This visualisation is created by <a href="https://github.com/satish2198/satishkumarFIT3179/tree/master/Assignment2" 
                                                target="_blank">Satish Kumar</a>. The datasource is <a href="#"" target="_blank">some
           data repository online</href>.</p>
-        <p>*WHO= World Health Organisation</p>
+          <p>*WHO=<a href="https://www.who.int/" target="_blank">World Health Organisation</a></p>
       </div>
     </div>
   
